# langgraph-checkpoint-delta

./: README.md  pyproject.toml
langgraph_checkpoint_delta/: __init__.py  checkpointer.py  env_detect.py  schema.py  serialization.py
langgraph_checkpoint_delta.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
langgraph_checkpoint_delta/backends/: __init__.py  base.py  deltalake_backend.py  spark_backend.py
tests/backends/: conftest.py  test_checkpointer.py  test_env_detect.py
